# jobscope

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  FEATURES.md  OPERATIONS.md  README.md  SECURITY.md  _search_entity.py  applications.html  config.example.yaml  deployment-manifest.json  index.html  manifest.webmanifest  pyproject.toml  requirements.txt  setup.ps1  setup.sh  site.enc.json  sw.js
.github/workflows/: ats-canary.yml  ci.yml  refresh.yml
assets/: index--leW5N46.js  index-0PBixRFV.js  index-0omLu22K.js  index-1ib-qFnF.js  index-2IzA-ElF.js  index-3NaW_xae.js  index-6FNsr2nk.js  index-80Qi9d1n.js  index-B-FqgJkn.js  index-B0_7spMS.js  index-B2ZOEHxn.js  index-B3AabPnR.js  index-B440dyir.js  index-B5FMB-a_.js  index-B5eQRlA-.js  index-B6w2OLaU.js  index-B79Ri-KP.js  index-B7TRhNfI.css  index-B7zGynIG.css  index-BDuLNVG6.js  index-BEWBQ_JE.js  index-BEr_80BY.js  index-BFkUqY8e.js  index-BGbNA0vu.js  index-BGbpU58V.css  index-BJ5J1uuW.js  index-BM4ZLlOk.css  index-BNm1zpYT.js  index-BOYUtbBX.js  index-BOZuadLS.js  index-BPEs1HgZ.css  index-BP_ZJErR.js  index-BQdzjDGB.css  index-BR8ZeqsR.js  index-BR_zUqm2.js  index-BSChTsj3.css  index-BTF9OT-g.js  index-BTgzMEEF.js  index-BTuvx32k.js  index-BWMP9dNA.js  (+187 more)
data/: .gitkeep
jobscope/: __init__.py  __main__.py  ai.py  apply.py  ats.py  brief.py  classify.py  companies.py  config.py  email.py  httpx.py  inbox.py  mailrules.py  match.py  model.py  pdf.py  pipeline.py  render.py  resume.py  scaffold.py  scrape.py  selftest.py  serve.py  store.py  tailor.py  track.py
jobscope/analyze/: __init__.py  atscheck.py  classify.py  coverage.py  insights.py  profile.py  resume.py  review.py
jobscope/apply/: __init__.py  apply.py  brief.py  campaigns.py  company_rank.py  finder.py  interview.py  monitoring.py  outreach.py  recovery.py  referrals.py  scout.py  tailor.py  track.py
jobscope/cli/: __init__.py  doctor.py  pipeline.py  scaffold.py  selftest.py
jobscope/core/: __init__.py  ai.py  companies.py  config.py  geo.py  httpx.py  model.py  snapshot.py
jobscope/deliver/: __init__.py  email.py  exporter.py  publish_artifact.py  render.py  serve.py
plan/: feature-ideas.md  next-steps.md  ui-upgrade.md  ux-overhaul.md  ux-rebuild.md
scripts/: apps-template.html  build-secure-apps.mjs  crypt-file.mjs  publish.ps1  publish.sh  refresh-and-publish-secure.cmd  refresh-and-publish.cmd  register-outreach-task.ps1  register-publish-secure-task.ps1  register-publish-task.ps1  register-refresh-task.ps1  register-serve-task.ps1  seed-cloud-db.ps1  unregister-outreach-task.ps1  unregister-publish-task.ps1
tests/: conftest.py  test_ai.py  test_ai_review.py  test_applications_cli.py  test_apply.py  test_ats.py  test_ats_canary.py  test_atscheck.py  test_campaign_api.py  test_campaign_cli.py  test_campaign_replies.py  test_classify.py  test_company_rank.py  test_config.py  test_coverage.py  test_crypto.py  test_dashboard_json.py  test_digest.py  test_discovery_review.py  test_doctor.py  test_email.py  test_emit_web.py  test_enrich.py  test_experience.py  test_filters.py  test_fp_corpus.py  test_geo.py  test_httpx.py  test_inbox.py  test_insights.py  test_interview.py  test_match.py  test_match_decision_eval.py  test_monitor_scan.py  test_monitor_seed.py  test_monitoring_actions.py  test_monitoring_store.py  test_outreach.py  test_outreach_campaign_store.py  test_outreach_campaigns.py  (+24 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  (+3 more)
(+211 files in other folders)
