[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscope"
version = "0.1.0"
description = "Resume-driven job scout, enricher, and application-prep tool (deterministic-first, AI-optional)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rinz0x0cruz" }]
keywords = ["jobs", "resume", "job-search", "ats", "automation", "career"]
dependencies = [
    "python-jobspy>=1.1.80",
    "pyyaml>=6.0",
    "requests>=2.31",
    "feedparser>=6.0",
    "yfinance>=0.2.40",
    "playwright>=1.40",
    "pypdf>=4.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jobscope = "jobscope.__main__:main"

[tool.setuptools.packages.find]
include = ["jobscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
